--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/index.css">
   </head>
   <body>
-    <h1>Olá mundo</h1>
+    <h1>Olá mundo!</h1>
 
   </body>
 </html>
