--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     <link rel="stylesheet" href="/css/index.css">
   </head>
   <body>
-    <h1>Olá mundo!</h1>
-
+  <header class="main-header">
+    <h1>Header</h1>
+    </header>
+  <aside class="sidebar">
+    <nav class="side-nav">
+      aside
+    </nav>
+  </aside>
+  <main>
+    main
+  </main>
+  <footer>
+    footer
+  </footer>
   </body>
 </html>
