--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     </header>
   <aside class="sidebar">
     <nav class="side-nav">
-      aside
-    </nav>
+      <a  class="link-padrao" href="#0">a</a>
+      <a  class="link-padrao" href="#0">b</a>
+      <a  class="link-padrao" href="#0">c</a>
+      <a  class="link-padrao" href="#0">d</a>
+      <a  class="link-padrao" href="#0">e</a>
   </aside>
   <main>
     main
