--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a  class="link-padrao" href="#0">c</a>
       <a  class="link-padrao" href="#0">d</a>
       <a  class="link-padrao" href="#0">e</a>
+    </nav>
   </aside>
   <main>
     main
