--- a/index.html
+++ b/index.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="utf-8">
-    <title>Projeto Dever</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <title>Dever</title>
+	  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	  <link rel="stylesheet" href="css/index.css"/>
+	  <link rel="stylesheet" href="css/normalize.css"/>
   </head>
   <body>
   <header class="main-header">
     <h1>Header</h1>
     </header>
   <aside class="sidebar">
-    <nav class="side-nav">
-      <a  class="link-padrao" href="#0">a</a>
+    <nav class="side-nav flex">
+      <a  class="link-padrao" href="#0">Get Started</a>
       <a  class="link-padrao" href="#0">b</a>
       <a  class="link-padrao" href="#0">c</a>
       <a  class="link-padrao" href="#0">d</a>
       <a  class="link-padrao" href="#0">e</a>
     </nav>
   </aside>
-  <main>
-    main
+  <main class="flex end">
+    <section id="get-started" class="container">
+      <h2>Get Started</h2>
+      <p>Welcome! This is a private page for you to play around with.</p>
+      <form class="flex">
+        <div><input type="checkbox" name="a"><label for="a">a</label</div>
+        <div><input type="checkbox"><label>b</label></div>
+        <div><input type="checkbox"><label>c</label></div>
+        <div><input type="checkbox"><label>d</label></div>
+      </form>
+    </section>
+
   </main>
   <footer>
     footer
